# elt_com_duckdb

./: .user.yml  Profiles.yml  README.md  pyproject.toml
DATAWAREHOUSE/: dbt_project.yml
dw/: dbt_project.yml
dw/seeds/: movimentacao_commodities.csv
src/: extract_load.py  requirements.txt
