[tool.poetry]
name = "elt-com-duckdb"
version = "0.1.0"
description = ""
authors = ["Daniel Menna <danielribeiromenna@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
sqlalchemy = "^2.0.30"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
yfinance = "^0.2.40"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
